# gge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake.sh  setup_build_env.sh
build_tools/: .expand_moduler.pl.swp  .ggeb.pm.swp  class_builder.pm  cpp_parser.pm  expand_gge_module.pl  expand_moduler.pl  generate_commands.pl  generate_get_gge_modules.pl  generate_gge_api_defaults.pl  generate_gge_init_module.pl  generate_guile_init_module_switch.pl  gge_command_parser.pm  gge_module_parser.pm  gge_modules.pm  gge_utils.pm  ggeb.pm  parse_templates.pm  write_guile.pl
build_tools/templates/: header.tmpl  runner_switch.tmpl  source.tmpl
cmake/: FindLog4cpp.cmake  FindSDL2.cmake  FindSDL2_SUPPORT_LIBRARIES.cmake
docs/: Doxyfile
docs/charts/: commander.dot  compile_dot.sh  event.dot  gge.dot  register_module.dot  script_communication.msc
docs/manual/: .gitignore  Makefile  inner_workings.tex  main.tex  outer_workings.tex
games/minimal_test/: game.scm  init.scm
games/test/: agent.scm  game.chai  game.scm  gge.cfg  hex_data.chai  init.chai  init.scm  world.scm
src/: chai_object.cpp  chai_object.hpp  command.hpp  componenter.hpp  configurer.cpp  configurer.hpp  core.cpp  core.hpp  events.cpp  events.hpp  filer.cpp  filer.hpp  game_loop.cpp  game_loop.hpp  gge.hpp  gge_api.cpp  gge_api.hpp  gge_api_defaults.generated  gge_module.cpp  gge_module.hpp  gge_module_initializer.cpp  gge_module_initializer.hpp  graphics.cpp  graphics.hpp  hex.cpp  hex.hpp  hex_grid.cpp  hex_grid.hpp  initializer.cpp  initializer.hpp  logger.cpp  logger.hpp  main.cpp  moduler.cpp  moduler.hpp  reblob_hex.example  registered_gge_modules.cpp  registered_gge_modules.hpp  runner.cpp  runner.hpp  (+12 more)
src/commands/: command.cpp  command.hpp  events_command.cpp  events_command.hpp  game_loop_command.cpp  game_loop_command.hpp  graphics_command.cpp  graphics_command.hpp  scroller_command.cpp  scroller_command.hpp  ticker_command.cpp  ticker_command.hpp
src/gge_modules/: agenter.cpp  agenter.hpp  componenter.cpp  componenter.hpp  events.cpp  events.hpp  game_loop.hpp  gge_module.cpp  gge_module.hpp  gge_module_initializer.cpp  gge_module_initializer.hpp  graphics.cpp  graphics.hpp  grider.cpp  grider.hpp  gui.cpp  gui.hpp  none.hpp  registered_gge_modules.hpp  scroller.cpp  scroller.hpp  shaper.cpp  shaper.hpp  spriter.cpp  spriter.hpp  texter.cpp  texter.hpp  timer.cpp
src/grid/: grid.cpp  grid.hpp  tile.cpp  tile.hpp
src/grid/hex/: coords.cpp  coords.hpp  hex.cpp  hex.hpp  hex_grid.cpp  hex_grid.hpp  hex_utils.cpp  hex_utils.hpp  orientation.hpp  reblob_hex.example
src/gui/: gui.hpp
src/hex/: cube_coordinate.hpp  hex.cpp  hex.hpp  hex_grid.cpp  hex_grid.hpp  orientation.hpp  utils.cpp  utils.hpp
src/script_handling/: gge_api.cpp  gge_api.hpp  gge_data.hpp  guile.cpp  guile.hpp  script_engine.hpp  scripter.cpp  scripter.hpp
src/script_handling/gge_scheme_std_modules/: gge_api.scm
src/script_handling/guile/: gge.scm  gge_api.scm  gge_api_wrapper.cpp  gge_api_wrapper.hpp  guile_init_module_switch.generated
